# scrivano

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  ajustes-ui.md  build-snap.sh  build.sh  dist.sh  package-deb.sh  skills-lock.json
.agents/rules/: design-system.md
.agents/skills/prp-writer/: SKILL.md
.agents/skills/release-automation/: SKILL.md
.agents/skills/security-release-gate/: SKILL.md
.agents/skills/snap-publish/: SKILL.md
.agents/skills/ui-redesign-scrivano/: SKILL.md  manifest.yaml
.atl/: skill-registry.md
.cargo/: config.toml
.github/workflows/: build-release.yml
PRPs/: PRD.md  fase-6-ollama-block-correction-post-release.md  prd-grabacion-pc.md  prp-scrivano.md  prp-transcripcion-chunking-reuniones-largas.md  prp-ui-redesign.md  results-transcripcion-chunking.md
assets/favicons/: manifest.json
docs/: correcciones-publicacion-snap.md  publicacion-de-nuevas-versiones-snap.md  snap-publishing-guide.md  snap-publishing-steps.md  snap-publishing.md  snap-summary.md
openspec/: config.yaml
openspec/specs/audio/: spec.md
snap/: snapcraft.yaml
snap/desktop/: scrivano.desktop
snap/wrapper/: scrivano-wrapper
src/: audio.rs  audio_chunker.rs  audio_devices.rs  chunk_transcription.rs  database.rs  export.rs  lib.rs  main.rs  ollama.rs  ollama_block.rs  perf_metrics.rs  playback.rs  recording_session.rs  summarization.rs  transcription.rs  ui.rs
src/ui/: about.rs  components.rs  recording.rs  settings.rs  spectrum.rs  theme.rs
tests/: export_tests.rs  legacy_library_compatibility_tests.rs  transcription_tests.rs
(+19 files in other folders)
