[package]
name = "meet-whisperer"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-L/home/meridian/lib"]

[dependencies]
libpulse-binding = "2"
whisper-rs = "0.15"
egui = "0.27"
eframe = "0.27"
tray-icon = "0.15"
anyhow = "1"
image = "0.25"
thiserror = "1"
dirs = "5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

[lib]
name = "meet_whisperer"
path = "src/lib.rs"
