[package]
name = "scrivano"
version = "1.1.7"
edition = "2021"

[dependencies]
libpulse-binding = "2"
whisper-rs = "0.15"
egui = "0.27"
eframe = "0.27"
tray-icon = { version = "0.15", optional = true }
anyhow = "1"
image = "0.25"
thiserror = "1"
dirs = "5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
hound = "3.5"
rodio = { version = "0.19", optional = true }
egui-phosphor = "0.5.0"

[dev-dependencies]
tempfile = "3"

[features]
default = ["audio-playback"]
audio-playback = ["dep:rodio"]
tray-icon = ["dep:tray-icon"]

[lib]
name = "scrivano"
path = "src/lib.rs"
